<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">

    <string name="app_name">Restaurant Ordering App</string>
    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>
    <!--activities labels-->
    <string name="label_login">Login</string>
    <string name="label_mail">Mail</string>
    <string name="label_password">Password</string>
    <string name="label_or">Or</string>
    <string name="label_sign_up">Sign up</string>
    <string name="label_username">Username</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_reset_password">Reset Password</string>
    <string name="label_order_type">Order Type</string>
    <string name="label_order_time">Order Time</string>
    <string name="label_time">Time</string>
    <string name="label_clear_cart">Clear Cart</string>
    <string name="label_total">Total</string>
    <string name="label_check_out">Check Out</string>
    <string name="label_main_settings">Main Settings</string>
    <string name="label_profile_information">My information</string>
    <string name="label_language">Language</string>
    <string name="label_support">Support</string>
    <string name="label_leave_review">Leave a review</string>
    <string name="label_privacy_policy">Privacy Policy</string>
    <string name="label_number_of_orders">Number of orders</string>
    <string name="label_branch">Branch</string>
    <string name="label_order_comments">Order comment</string>
    <string name="label_address_comments">Address comment</string>
    <string name="label_alternative_address">Alternative Address</string>
    <string name="label_alternative_address_note">If you are ordering from a different address please write it down here</string>
    <!--Navigation Drawer Items-->
    <string name="label_store">Store</string>
    <string name="label_others">Others</string>
    <string name="label_home">Home</string>
    <string name="label_promotions">Promotions</string>
    <string name="label_past_orders">Past Orders</string>
    <string name="label_settings">Settings</string>
    <string name="label_contact_us">Contact Us</string>
    <string name="label_logout">Logout</string>
    <!--Home Categories-->
    <string name="home_category_ma7ashy">Mahashy</string>
    <string name="home_category_grills">Grills</string>
    <string name="home_category_soups">Soups</string>
    <string name="home_category_poultry">Poultry</string>
    <string name="home_category_pastries">Pastries</string>
    <string name="home_category_chef_dishes">Chef\'s Dishes</string>
    <!-- Profile Settings-->
    <string name="label_phone">Phone Number</string>
    <string name="label_city">City</string>
    <string name="label_area">Area and Street</string>
    <string name="label_building">Building</string>
    <string name="label_floor">Floor</string>
    <string name="label_apart_num">Apartment Number</string>
    <string name="label_change_number">Change Phone Number</string>
    <string name="label_change_city">Change City</string>
    <string name="label_change_area">Change Area</string>
    <string name="label_change_building">Change Building</string>
    <string name="label_change_floor">Change Floor</string>
    <string name="label_change_apart_number">Change Apartment Number</string>
    <string name="label_changed_successfully">Changed Successfully</string>
    <string name="label_invalid_input">Invalid Input</string>
    <!--Misc Labels-->
    <string name="label_loading">Loading...</string>
    <string name="label_choose_language">Choose Language</string>
    <string name="label_confirm">Confirm</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_change">Change</string>
    <string name="prompt_select_category">Select Category</string>
    <!--Branches-->
    <string-array name="branches">
        <item>Bahary</item>
        <item>Mandara</item>
        <item>Downtown</item>
        <item>Moqattam</item>
        <item>Masr El Gedida</item>
        <item>Madinet El Nasr</item>
        <item>KSA</item>
    </string-array>
    <!--Weights-->
    <string-array name="order_weights">
        <item>&#8531; Kg</item>
        <item>&#189; Kg</item>
        <item>&#190; Kg</item>
        <item>1 Kg</item>
    </string-array>
    <!-- Keys -->
    <string name="facebook_app_id">461386024368249</string>
    <string name="fb_login_protocol_scheme">fb461386024368249</string>

    <string-array name="array_languages">
        <item>English</item>
        <item>عربي</item>
    </string-array>
    <string-array name="checkout_order_type">
        <item>Delivery </item>
        <item>Pick up</item>
    </string-array>

    <string-array name="filter_categories">
        <item>Select a category..</item>
        <item>All</item>
        <item>Grills</item>
        <item>Mahashy</item>
        <item>Poultry</item>
        <item>Soups</item>
        <item>Chef\'s Dishes</item>
        <item>Pastries</item>
    </string-array>

    <string-array name="payment_method">
        <item>Cash</item>
        <item>Visa</item>
    </string-array>
</resources>
