<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/food_bg"
        android:scaleType="centerCrop"
        android:alpha="0.5"/>

    <EditText
        android:id="@+id/et_order_comments"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:hint="@string/label_order_comments"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_address_comments"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/label_address_comments"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/et_order_comments"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_order_comments"
        app:layout_constraintTop_toBottomOf="@+id/et_order_comments" />
    <EditText
        android:id="@+id/et_alt_address"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/label_alternative_address"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/et_address_comments"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_address_comments"
        app:layout_constraintTop_toBottomOf="@+id/et_address_comments" />
    <TextView
        android:id="@+id/textview1"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:text="@string/label_alternative_address_note"
        android:textStyle="normal"
        android:textSize="18sp"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="@+id/et_alt_address"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_alt_address"
        app:layout_constraintTop_toBottomOf="@+id/et_alt_address"
        />
    <Spinner
        android:id="@+id/spinner_payment_method"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:entries="@array/payment_method"
        app:layout_constraintEnd_toEndOf="@+id/textview1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textview1"
        app:layout_constraintTop_toBottomOf="@+id/textview1"
        />
</android.support.constraint.ConstraintLayout>