<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/label_username"/>
            <TextView
                android:id="@+id/tv_username"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:text="Ahmad Muhammad AbdulMuttaleb"
                android:textSize="16sp"
                android:textAlignment="viewStart"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="8dp"
        android:layout_marginTop="16dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/label_mail"/>
            <TextView
                android:id="@+id/tv_mail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:text="a.m.abdelmottaleb@gmail.com"
                android:textSize="16sp"
                android:textAlignment="viewStart"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_phone_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="8dp"
        android:layout_marginTop="16dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/label_phone"/>
            <TextView
                android:id="@+id/tv_phone_number"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:text="01008070689"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:textAlignment="viewStart"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_city"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="8dp"
        android:layout_marginTop="16dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/label_city"/>
            <TextView
                android:id="@+id/tv_city"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:text="Borg El Arab"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:textAlignment="viewStart"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_area"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="8dp"
        android:layout_marginTop="16dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/label_area"/>
            <TextView
                android:id="@+id/tv_area"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:text="El Momayaz"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:textAlignment="viewStart"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_building"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="8dp"
        android:layout_marginTop="16dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/label_building"/>
            <TextView
                android:id="@+id/tv_building"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:text="27"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:textAlignment="viewStart"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_floor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="8dp"
        android:layout_marginTop="16dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/label_floor"/>
            <TextView
                android:id="@+id/tv_floor"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:text="3"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:textAlignment="viewStart"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_apart_num"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="8dp"
        android:layout_marginTop="16dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/label_apart_num"/>
            <TextView
                android:id="@+id/tv_apart_number"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:text="6"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:textAlignment="viewStart"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_branch"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/label_branch"/>
            <TextView
                android:id="@+id/tv_branch"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:text="6"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:textAlignment="viewStart"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</ScrollView>