<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <TextView
        android:id="@+id/tv_main_settings_label"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:text="@string/label_main_settings"
        android:padding="8dp"
        android:elevation="2dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_main_settings_label">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:alpha="0.8"
            android:padding="4dp"
            android:src="@drawable/ic_person_black_24dp"
            android:tint="@color/colorPrimary" />

        <TextView
            android:id="@+id/tv_profile_settings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center_vertical"
            android:text="@string/label_profile_information"
            android:textSize="16sp" />
    </LinearLayout>


    <View
        android:id="@+id/v_2"
        android:layout_width="340dp"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:layout_margin="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_1"
        />

    <LinearLayout
        android:id="@+id/ll_3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/v_2"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/white"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:src="@drawable/ic_language_black_24dp"
            android:tint="@color/colorPrimary"
            android:alpha="0.8"/>
        <TextView
            android:id="@+id/tv_choose_language"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:text="@string/label_language"
            android:gravity="center_vertical"
            android:textSize="16sp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_support_label"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:text="@string/label_support"
        android:padding="8dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:elevation="2dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_3" />

    <LinearLayout
        android:id="@+id/ll_4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_support_label">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:alpha="0.8"
            android:padding="4dp"
            android:src="@drawable/ic_chat_black_24dp"
            android:tint="@color/colorPrimary" />

        <TextView
            android:id="@+id/tv_leave_review"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center_vertical"
            android:text="@string/label_leave_review"
            android:textSize="16sp" />
    </LinearLayout>
    <View
        android:id="@+id/v_3"
        android:layout_width="340dp"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:layout_margin="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_4"
        />
    <LinearLayout
        android:id="@+id/ll_5"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/v_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:src="@drawable/ic_lock_black_24dp"
            android:tint="@color/colorPrimary"
            android:alpha="0.8"/>
        <TextView
            android:id="@+id/tv_privacy_policy"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:text="@string/label_privacy_policy"
            android:gravity="center_vertical|start"
            android:textSize="16sp"
            />
    </LinearLayout>
    <View
        android:id="@+id/v_4"
        android:layout_width="340dp"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:layout_margin="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_5"
        />
</android.support.constraint.ConstraintLayout>